# mvp-betchat

./: .env.example  .gitignore  requirements.txt  vercel.json
api/: database.py  index.py  schemas.py
api/routers/: groups.py
backend/: database.py  main.py  pyproject.toml
backend/routers/: bets.py  players.py  simulate.py
docs/: PRD.md  SPEC.md
frontend/: vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: DevPanel.tsx  Toast.tsx
frontend/src/pages/: BetPage.tsx  GrupoPage.tsx  HomePage.tsx  ResultPage.tsx
frontend/src/styles/: app.css
public/: index.html
public/assets/: index-BrKnAJ7K.css  index-DYM8ZB05.js
