[project]
name = "backend"
version = "0.1.0"
description = "Betchat - pari-mutuel betting system for WhatsApp groups"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]